feat: 容易辨明的错误与正确图标

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,5 +4,8 @@
     "loading": "Loading...",
     "success": "Success !",
     "error": "Error"
+  },
+  "osError": {
+    "getSteamDirectory": "Failed to get the Steam directory"
   }
 }
