--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,11 +1,8 @@
 {
   "startCopy": {
-    "common": "Click to copy the mod to the game directory",
+    "common": "Copy mod to game directory",
     "loading": "Loading...",
     "success": "Success !",
     "error": "Error"
-  },
-  "osError": {
-    "getSteamDirectory": "Failed to get the Steam directory"
   }
 }
