refactor: Button component

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -7,5 +7,6 @@
       "content": "Now you can close the app and play with the mod !"
     },
     "error": "Error"
-  }
+  },
+  "loading": "Loading..."
 }
