--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -21,5 +21,8 @@
       "content": "现在游戏目录下的mod已被清除。",
       "title": "处理成功 !"
     }
-  }
+  },
+  "copied": "复制了",
+  "files": "个文件",
+  ".": "。"
 }
