--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -1,5 +1,8 @@
 {
+  "": "",
+  "copied": "",
   "currentFolder": "当前目录",
+  "files": "",
   "loading": "加载中...",
   "modsFolder": "选择模组目录",
   "startCopy": {
@@ -7,6 +10,8 @@
     "error": "发生错误",
     "success": {
       "content": "现在可以关闭程序并开始游戏了。",
+      "counts": "复制了 {counts} 个文件。",
+      "empty": "啊哦! 看起来目录下没有mod。",
       "title": "处理成功 !"
     }
   },
@@ -21,8 +26,5 @@
       "content": "现在游戏目录下的mod已被清除。",
       "title": "处理成功 !"
     }
-  },
-  "copied": "复制了",
-  "files": "个文件",
-  ".": "。"
+  }
 }
